# enterprise-ai

./: README.md
backend/: database.py  main.py  mcp.py  pyproject.toml
backend/data/: __init__.py  mcp.json
backend/routers/: api.py  mcp.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
