[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "fastmcp>=2.13.0.2",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
